versioned_docs/version-2.1.0/interacting/json-rpc-ns/admin.md
---
title: admin namespace
sidebar_label: admin
sidebar_position: 0
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

### admin_addPeer

Adds the given node as a static peer. The connection is maintained for the lifetime of the process. Set `persistent` to also write the peer to static-nodes.json so it is restored on restart.

<Tabs>
<TabItem value="params" label="Parameters">

1. `enode`: _string_

2. `persistent`: _boolean_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_addPeer",
      "params": [enode, persistent]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

`true` if the peer is in the static set after the call.

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_addTrustedPeer

Adds the given node to the trusted peer set so it can always connect even when slots are full. Set `persistent` to also write the peer to trusted-nodes.json so it is restored on restart.

<Tabs>
<TabItem value="params" label="Parameters">

1. `enode`: _string_

2. `persistent`: _boolean_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_addTrustedPeer",
      "params": [enode, persistent]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

`true` if the peer is in the trusted set after the call.

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_dataDir

Returns the absolute path to the node's data directory.

<Tabs>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_dataDir",
      "params": []
    }'
```

</TabItem>
<TabItem value="response" label="Response">

The data directory path as a string.

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _string_

</TabItem>
</Tabs>

### admin_exportEraHistory

Exports a range of historic blocks in erae format.

<Tabs>
<TabItem value="params" label="Parameters">

1. `destinationPath`: _string_

2. `from`: _string_ (hex integer)

3. `to`: _string_ (hex integer)


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_exportEraHistory",
      "params": [destinationPath, from, to]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _string_

</TabItem>
</Tabs>

### admin_exportHistory

Exports a range of historic block in era1 format.

<Tabs>
<TabItem value="params" label="Parameters">

1. `destinationPath`: _string_

2. `from`: _integer_

3. `to`: _integer_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_exportHistory",
      "params": [destinationPath, from, to]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _string_

</TabItem>
</Tabs>

### admin_importEraHistory

Imports a range of historic blocks from an erae directory.

<Tabs>
<TabItem value="params" label="Parameters">

1. `sourcePath`: _string_

2. `from`: _string_ (hex integer)

3. `to`: _string_ (hex integer)

4. `accumulatorFile`: _string_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_importEraHistory",
      "params": [sourcePath, from, to, accumulatorFile]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _string_

</TabItem>
</Tabs>

### admin_importHistory

Import a range of historic block from era1 directory.

<Tabs>
<TabItem value="params" label="Parameters">

1. `sourcePath`: _string_

2. `from`: _integer_

3. `to`: _integer_

4. `accumulatorFile`: _string_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_importHistory",
      "params": [sourcePath, from, to, accumulatorFile]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _string_

</TabItem>
</Tabs>

### admin_isBlockProcessingPaused

Returns whether local block processing is currently paused.

<Tabs>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_isBlockProcessingPaused",
      "params": []
    }'
```

</TabItem>
<TabItem value="response" label="Response">

`true` if block processing is paused, `false` if running.

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_isStateRootAvailable

True if state root for the block is available

<Tabs>
<TabItem value="params" label="Parameters">

1. `block`: _string_ (block number or hash or either of `earliest`, `finalized`, `latest`, `pending`, or `safe`)


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_isStateRootAvailable",
      "params": [block]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_nodeInfo

Displays relevant information about this node.

<Tabs>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_nodeInfo",
      "params": []
    }'
```

</TabItem>
<TabItem value="response" label="Response">

Information about this node

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _object_
  - `enode`: _string_
  - `enr`: _string_
  - `id`: _string_
  - `ip`: _string_
  - `listenAddress`: _string_
  - `name`: _string_
  - `ports`: _object_
    - `discovery`: _integer_
    - `listener`: _integer_
  - `protocols`: map of _object_
    - `chainId`: _string_ (hex integer)
    - `config`: _object_
      - `beaconChainGenesisTimestamp`: _string_ (hex integer)
      - `blobSchedule`: array of _object_
        - `baseFeeUpdateFraction`: _string_ (hex integer)
        - `max`: _string_ (hex integer)
        - `target`: _string_ (hex integer)
        - `timestamp`: _string_ (hex integer)
      - `depositContractAddress`: _string_ (address)
      - `eip1014Transition`: _string_ (hex integer)
      - `eip1052Transition`: _string_ (hex integer)
      - `eip1108Transition`: _string_ (hex integer)
      - `eip1153Transition`: _string_ (hex integer)
      - `eip1153TransitionTimestamp`: _string_ (hex integer)
      - `eip1283DisableTransition`: _string_ (hex integer)
      - `eip1283ReenableTransition`: _string_ (hex integer)
      - `eip1283Transition`: _string_ (hex integer)
      - `eip1344Transition`: _string_ (hex integer)
      - `eip140Transition`: _string_ (hex integer)
      - `eip145Transition`: _string_ (hex integer)
      - `eip150Transition`: _string_ (hex integer)
      - `eip152Transition`: _string_ (hex integer)
      - `eip1559BaseFeeInitialValue`: _string_ (hex integer)
      - `eip1559BaseFeeMaxChangeDenominator`: _string_ (hex integer)
      - `eip1559BaseFeeMinValue`: _string_ (hex integer)
      - `eip1559BaseFeeMinValueTransition`: _string_ (hex integer)
      - `eip1559ElasticityMultiplier`: _string_ (hex integer)
      - `eip1559FeeCollectorTransition`: _string_ (hex integer)
      - `eip1559Transition`: _string_ (hex integer)
      - `eip155Transition`: _string_ (hex integer)
      - `eip160Transition`: _string_ (hex integer)
      - `eip161abcTransition`: _string_ (hex integer)
      - `eip161dTransition`: _string_ (hex integer)
      - `eip1706Transition`: _string_ (hex integer)
      - `eip1884Transition`: _string_ (hex integer)
      - `eip2028Transition`: _string_ (hex integer)
      - `eip211Transition`: _string_ (hex integer)
      - `eip214Transition`: _string_ (hex integer)
      - `eip2200Transition`: _string_ (hex integer)
      - `eip2315Transition`: _string_ (hex integer)
      - `eip2537Transition`: _string_ (hex integer)
      - `eip2537TransitionTimestamp`: _string_ (hex integer)
      - `eip2565Transition`: _string_ (hex integer)
      - `eip2780TransitionTimestamp`: _string_ (hex integer)
      - `eip2929Transition`: _string_ (hex integer)
      - `eip2930Transition`: _string_ (hex integer)
      - `eip2935ContractAddress`: _string_ (address)
      - `eip2935RingBufferSize`: _string_ (hex integer)
      - `eip2935Transition`: _string_ (hex integer)
      - `eip2935TransitionTimestamp`: _string_ (hex integer)
      - `eip3198Transition`: _string_ (hex integer)
      - `eip3529Transition`: _string_ (hex integer)
      - `eip3541Transition`: _string_ (hex integer)
      - `eip3607Transition`: _string_ (hex integer)
      - `eip3651Transition`: _string_ (hex integer)
      - `eip3651TransitionTimestamp`: _string_ (hex integer)
      - `eip3855Transition`: _string_ (hex integer)
      - `eip3855TransitionTimestamp`: _string_ (hex integer)
      - `eip3860Transition`: _string_ (hex integer)
      - `eip3860TransitionTimestamp`: _string_ (hex integer)
      - `eip4788ContractAddress`: _string_ (address)
      - `eip4788TransitionTimestamp`: _string_ (hex integer)
      - `eip4844BlobGasPriceUpdateFraction`: _string_ (hex integer)
      - `eip4844FeeCollectorTransitionTimestamp`: _string_ (hex integer)
      - `eip4844MinBlobGasPrice`: _string_ (hex integer)
      - `eip4844Transition`: _string_ (hex integer)
      - `eip4844TransitionTimestamp`: _string_ (hex integer)
      - `eip4895TransitionTimestamp`: _string_ (hex integer)
      - `eip5656Transition`: _string_ (hex integer)
      - `eip5656TransitionTimestamp`: _string_ (hex integer)
      - `eip6110TransitionTimestamp`: _string_ (hex integer)
      - `eip658Transition`: _string_ (hex integer)
      - `eip6780Transition`: _string_ (hex integer)
      - `eip6780TransitionTimestamp`: _string_ (hex integer)
      - `eip7002ContractAddress`: _string_ (address)
      - `eip7002TransitionTimestamp`: _string_ (hex integer)
      - `eip7251ContractAddress`: _string_ (address)
      - `eip7251TransitionTimestamp`: _string_ (hex integer)
      - `eip7594TransitionTimestamp`: _string_ (hex integer)
      - `eip7623Transition`: _string_ (hex integer)
      - `eip7623TransitionTimestamp`: _string_ (hex integer)
      - `eip7702Transition`: _string_ (hex integer)
      - `eip7702TransitionTimestamp`: _string_ (hex integer)
      - `eip7708TransitionTimestamp`: _string_ (hex integer)
      - `eip7778TransitionTimestamp`: _string_ (hex integer)
      - `eip7805TransitionTimestamp`: _string_ (hex integer)
      - `eip7823TransitionTimestamp`: _string_ (hex integer)
      - `eip7825TransitionTimestamp`: _string_ (hex integer)
      - `eip7843TransitionTimestamp`: _string_ (hex integer)
      - `eip7883TransitionTimestamp`: _string_ (hex integer)
      - `eip7918TransitionTimestamp`: _string_ (hex integer)
      - `eip7928TransitionTimestamp`: _string_ (hex integer)
      - `eip7934MaxRlpBlockSize`: _integer_
      - `eip7934TransitionTimestamp`: _string_ (hex integer)
      - `eip7939TransitionTimestamp`: _string_ (hex integer)
      - `eip7951TransitionTimestamp`: _string_ (hex integer)
      - `eip7954TransitionTimestamp`: _string_ (hex integer)
      - `eip7976TransitionTimestamp`: _string_ (hex integer)
      - `eip7981TransitionTimestamp`: _string_ (hex integer)
      - `eip7Transition`: _string_ (hex integer)
      - `eip8024TransitionTimestamp`: _string_ (hex integer)
      - `eip8037TransitionTimestamp`: _string_ (hex integer)
      - `eip8038TransitionTimestamp`: _string_ (hex integer)
      - `eip8246TransitionTimestamp`: _string_ (hex integer)
      - `eip8282TransitionTimestamp`: _string_ (hex integer)
      - `feeCollector`: _string_ (address)
      - `forkBlock`: _string_ (hex integer)
      - `forkCanonHash`: _string_ (hash)
      - `gasLimitBoundDivisor`: _string_ (hex integer)
      - `maxCodeSize`: _string_ (hex integer)
      - `maxCodeSizeTransition`: _string_ (hex integer)
      - `maxCodeSizeTransitionTimestamp`: _string_ (hex integer)
      - `maximumExtraDataSize`: _string_ (hex integer)
      - `mergeForkIdTransition`: _string_ (hex integer)
      - `minBalRetentionEpochs`: _string_ (hex integer)
      - `minGasLimit`: _string_ (hex integer)
      - `minHistoryRetentionEpochs`: _string_ (hex integer)
      - `registrar`: _string_ (address)
      - `rip7212TransitionTimestamp`: _string_ (hex integer)
      - `terminalPoWBlockNumber`: _string_ (hex integer)
      - `terminalTotalDifficulty`: _string_ (hex integer)
      - `transactionPermissionContract`: _string_ (address)
      - `transactionPermissionContractTransition`: _string_ (hex integer)
      - `validateChainIdTransition`: _string_ (hex integer)
      - `validateReceiptsTransition`: _string_ (hex integer)
    - `difficulty`: _string_ (hex integer)
    - `genesisHash`: _string_ (hash)
    - `headHash`: _string_ (hash)
    - `networkId`: _string_ (hex integer)

</TabItem>
</Tabs>

### admin_pauseBlockProcessing

Pauses local block processing. Blocks received from the network or consensus client are still queued but not processed; call `admin_resumeBlockProcessing` to process the accumulated backlog. Use `admin_isBlockProcessingPaused` to query the state. Intended for testing and diagnostics.

<Tabs>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_pauseBlockProcessing",
      "params": []
    }'
```

</TabItem>
<TabItem value="response" label="Response">

`true` if block processing is paused after the call (the request succeeded); `false` if it did not take effect.

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_peers

Displays a list of connected peers including information about them.

<Tabs>
<TabItem value="params" label="Parameters">

1. `includeDetails`: _boolean_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_peers",
      "params": [includeDetails]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

List of connected peers including information

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: array of _object_
  - `caps`: array of _string_ (protocol/version)
  - `clientType`: _integer_
  - `enode`: _string_
  - `enr`: _string_
  - `ethDetails`: _string_
  - `id`: _string_ (node id, no "0x" prefix)
  - `lastSignal`: _string_ (date-time)
  - `name`: _string_
  - `network`: _object_
    - `inbound`: _boolean_
    - `localAddress`: _string_
    - `remoteAddress`: _string_
    - `static`: _boolean_
    - `trusted`: _boolean_
  - `protocols`: map of _object_

</TabItem>
</Tabs>

### admin_prune

Runs full pruning if enabled.

<Tabs>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_prune",
      "params": []
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _string_

</TabItem>
</Tabs>

### admin_removePeer

Removes the given node from the static peer set and disconnects any active session. Set `persistent` to also remove the peer from static-nodes.json so it is not restored on restart.

<Tabs>
<TabItem value="params" label="Parameters">

1. `enode`: _string_

2. `persistent`: _boolean_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_removePeer",
      "params": [enode, persistent]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

`true` if the input enode was valid and the removal was attempted.

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_removeTrustedPeer

Removes the given node from the trusted peer set. Set `persistent` to also remove the peer from trusted-nodes.json so it is not re-trusted on restart.

<Tabs>
<TabItem value="params" label="Parameters">

1. `enode`: _string_

2. `persistent`: _boolean_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_removeTrustedPeer",
      "params": [enode, persistent]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

`true` if the input enode was valid and the removal was attempted.

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_resumeBlockProcessing

Resumes local block processing previously paused via `admin_pauseBlockProcessing`, processing any blocks accumulated in the queue. Intended for testing and diagnostics.

<Tabs>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_resumeBlockProcessing",
      "params": []
    }'
```

</TabItem>
<TabItem value="response" label="Response">

`true` when the resume request was accepted.

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_subscribe

Subscribes to a particular event over WebSocket. For every event that matches the subscription, a notification with event details and subscription id is sent to a client.

<Tabs>
<TabItem value="params" label="Parameters">

1. `subscriptionName`: _string_

2. `args`: _string_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_subscribe",
      "params": [subscriptionName, args]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _string_

</TabItem>
</Tabs>

### admin_unsubscribe

Unsubscribes from a subscription. Returns true on success; if the subscription does not exist, a 'subscription not found' error is returned.

<Tabs>
<TabItem value="params" label="Parameters">

1. `subscriptionId`: _string_


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_unsubscribe",
      "params": [subscriptionId]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _boolean_

</TabItem>
</Tabs>

### admin_verifyTrie

Runs VerifyTrie.

<Tabs>
<TabItem value="params" label="Parameters">

1. `block`: _string_ (block number or hash or either of `earliest`, `finalized`, `latest`, `pending`, or `safe`)


</TabItem>
<TabItem value="request" label="Request" default>

```bash
curl localhost:8545 \
  -X POST \
  -H "Content-Type: application/json" \
  --data '{
      "jsonrpc": "2.0",
      "id": 0,
      "method": "admin_verifyTrie",
      "params": [block]
    }'
```

</TabItem>
<TabItem value="response" label="Response">

```json
{
  "jsonrpc": "2.0",
  "id": 0,
  "result": result
}
```

`result`: _string_

</TabItem>
</Tabs>

